# movie-rating-system

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  fix_db.py  fix_ratings_db.py  pyproject.toml
alembic/: env.py
alembic/versions/: 532d3768ae6a_initial_migration.py
app/: logging_config.py  main.py
app/controller/: movie_controller.py
app/db/: session.py
app/exceptions/: handler.py
app/models/: models.py
app/repositories/: movie_repository.py
app/schemas/: movie_schema.py
app/services/: movie_service.py
scripts/: seed_check.py  seeddb.sql
